Fixed modal on small screen.

--- a/project/styles/medium.css
+++ b/project/styles/medium.css
@@ -56,4 +56,9 @@
     .author {
         margin-top: 0;
     }
+
+    .modal-content {
+    padding: 2rem;
+    max-height: 80vh;
+    }
 }
